[PATCH] Fix footer alignment for large screens;

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -125,6 +125,7 @@ body {
 }
 
 .hero {
+  flex: 1;
   width: 100%;
   height: fit-content;
   display: flex;
@@ -506,9 +507,6 @@ body {
   }
 
   .footer {
-    position: absolute;
-    bottom: 0;
-    left: 0;
     padding: 0.25rem 0.5rem;
   }
 
